--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,7 @@
 server.servlet.context-path=/gameplay
-
-management.endpoints.web.exposure.include=*
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2
+spring.datasource.url=jdbc:h2:mem:3tdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=h2
+spring.datasource.password=h2
